tests/c_headers/net_if.h


struct net_if_addr {
	struct net_addr address;
#if defined(CONFIG_NET_NATIVE_IPV6)
	struct net_timeout lifetime;
#endif
#if defined(CONFIG_NET_IPV6_DAD) && defined(CONFIG_NET_NATIVE_IPV6)
	sys_snode_t dad_node;
	uint32_t dad_start;
#endif
	enum net_addr_type addr_type;
	enum net_addr_state addr_state;
#if defined(CONFIG_NET_IPV6_DAD) && defined(CONFIG_NET_NATIVE_IPV6)
	uint8_t dad_count;
#endif
	uint8_t is_infinite : 1;
	uint8_t is_used : 1;
	uint8_t is_mesh_local : 1;
	uint8_t _unused : 5;
};
struct net_if_mcast_addr {
	struct net_addr address;
	uint8_t is_used : 1;
	uint8_t is_joined : 1;
	uint8_t _unused : 6;
};
struct net_if_dhcpv4 {
	sys_snode_t node;
	int64_t timer_start;
	uint32_t request_time;
	uint32_t xid;
	uint32_t lease_time;
	uint32_t renewal_time;
	uint32_t rebinding_time;
	struct in_addr server_id;
	struct in_addr requested_ip;
	enum net_dhcpv4_state state;
	uint8_t attempts;
};
struct net_if_ipv4_autoconf {
	sys_snode_t node;
	struct net_if *iface;
	int64_t timer_start;
	uint32_t timer_timeout;
	struct in_addr current_ip;
	struct in_addr requested_ip;
	enum net_ipv4_autoconf_state state;
	uint8_t probe_cnt;
	uint8_t announce_cnt;
	uint8_t conflict_cnt;
};
struct net_if_ip {
#if defined(CONFIG_NET_NATIVE_IPV6)
	struct net_if_ipv6 *ipv6;
#endif 
#if defined(CONFIG_NET_NATIVE_IPV4)
	struct net_if_ipv4 *ipv4;
#endif 
};
struct net_if_config {
	struct net_if_ip ip;
#if defined(CONFIG_NET_DHCPV4) && defined(CONFIG_NET_NATIVE_IPV4)
	struct net_if_dhcpv4 dhcpv4;
#endif 
#if defined(CONFIG_NET_IPV4_AUTO) && defined(CONFIG_NET_NATIVE_IPV4)
	struct net_if_ipv4_autoconf ipv4auto;
#endif 
#if defined(CONFIG_NET_L2_VIRTUAL)
	sys_slist_t virtual_interfaces;
#endif 
};
struct net_if_dev {
	const struct device *dev;
	const struct net_l2 * const l2;
	void *l2_data;
	struct net_linkaddr link_addr;
#if defined(CONFIG_NET_OFFLOAD)
	struct net_offload *offload;
#endif 
	uint16_t mtu;
#if defined(CONFIG_NET_SOCKETS_OFFLOAD)
	bool offloaded;
#endif 
};
struct net_if {
	struct net_if_dev *if_dev;
#if defined(CONFIG_NET_STATISTICS_PER_INTERFACE)
	struct net_stats stats;
#endif 
	struct net_if_config config;
#if defined(CONFIG_NET_POWER_MANAGEMENT)
	int tx_pending;
#endif
};