tests/c_headers/net_ip.nim


  net_addr* {.importc: "net_addr", header: "net_ip.h", bycopy.} = object
    family* {.importc: "family".}: sa_family_t
    ano_net_ip_5* {.importc: "ano_net_ip_5".}: INNER_C_UNION_net_ip_4


var IN6ADDR_ANY_INIT* {.importc: "IN6ADDR_ANY_INIT", header: "net_ip.h".}: int
let in6addr_any* {.importc: "in6addr_any", header: "net_ip.h".}: in6_addr

let in6addr_loopback* {.importc: "in6addr_loopback", header: "net_ip.h".}: in6_addr

## * @endcond
## * Max length of the IPv4 address as a string. Defined by POSIX.

var INET_ADDRSTRLEN* {.importc: "INET_ADDRSTRLEN", header: "net_ip.h".}: int
## * Max length of the IPv6 address as a string. Takes into account possible
##  mapped IPv4 addresses.
##

var INET6_ADDRSTRLEN* {.importc: "INET6_ADDRSTRLEN", header: "net_ip.h".}: int
## * @cond INTERNAL_HIDDEN
##  These are for internal usage of the stack

var NET_IPV6_ADDR_LEN* {.importc: "NET_IPV6_ADDR_LEN", header: "net_ip.h".}: int
## * @endcond

type
  net_ip_mtu* {.size: sizeof(cint).} = enum ## * IPv6 MTU length. We must be able to receive this size IPv6 packet
                                       ##  without fragmentation.
                                       ##
    NET_IPV4_MTU = 576, NET_IPV6_MTU = 1280 ## * IPv4 MTU length. We must be able to receive this size IPv4 packet
                                      ##  without fragmentation.
                                      ##


## * Network packet priority settings described in IEEE 802.1Q Annex I.1

type
  net_priority* {.size: sizeof(uint8).} = enum
    NET_PRIORITY_BE = 0,        ## *< Best effort (default)
    NET_PRIORITY_BK = 1,        ## *< Background (lowest)
    NET_PRIORITY_EE = 2,        ## *< Excellent effort
    NET_PRIORITY_CA = 3,        ## *< Critical applications (highest)
    NET_PRIORITY_VI = 4,        ## *< Video, < 100 ms latency and jitter
    NET_PRIORITY_VO = 5,        ## *< Voice, < 10 ms latency and jitter
    NET_PRIORITY_IC = 6,        ## *< Internetwork control
    NET_PRIORITY_NC = 7


var NET_MAX_PRIORITIES* {.importc: "NET_MAX_PRIORITIES", header: "net_ip.h".}: int
## * IPv6/IPv4 network connection tuple

type
  net_tuple* {.importc: "net_tuple", header: "net_ip.h", bycopy.} = object
    remote_addr* {.importc: "remote_addr".}: ptr net_addr ## *< IPv6/IPv4 remote address
    local_addr* {.importc: "local_addr".}: ptr net_addr ## *< IPv6/IPv4 local address
    remote_port* {.importc: "remote_port".}: uint16 ## *< UDP/TCP remote port
    local_port* {.importc: "local_port".}: uint16 ## *< UDP/TCP local port
    ip_proto* {.importc: "ip_proto".}: net_ip_protocol ## *< IP protocol


## * What is the current state of the network address

type
  net_addr_state* {.size: sizeof(uint8).} = enum
    NET_ADDR_ANY_STATE = -1,    ## *< Default (invalid) address type
    NET_ADDR_TENTATIVE = 0,     ## *< Tentative address
    NET_ADDR_PREFERRED,       ## *< Preferred address
    NET_ADDR_DEPRECATED       ## *< Deprecated address


## * How the network address is assigned to network interface

type
  net_addr_type* {.size: sizeof(uint8).} = enum ## * Default value. This is not a valid value.
    NET_ADDR_ANY = 0,           ## * Auto configured address
    NET_ADDR_AUTOCONF,        ## * Address is from DHCP
    NET_ADDR_DHCP,            ## * Manually set address
    NET_ADDR_MANUAL,          ## * Manually set address which is overridable by DHCP
    NET_ADDR_OVERRIDABLE


## * @cond INTERNAL_HIDDEN

type
  net_ipv6_hdr* {.importc: "net_ipv6_hdr", header: "net_ip.h", bycopy, packed.} = object
    vtc* {.importc: "vtc".}: uint8
    tcflow* {.importc: "tcflow".}: uint8
    flow* {.importc: "flow".}: uint16
    len* {.importc: "len".}: uint16
    nexthdr* {.importc: "nexthdr".}: uint8
    hop_limit* {.importc: "hop_limit".}: uint8
    src* {.importc: "src".}: in6_addr
    dst* {.importc: "dst".}: in6_addr

  net_ipv6_frag_hdr* {.importc: "net_ipv6_frag_hdr", header: "net_ip.h", bycopy, packed.} = object
    nexthdr* {.importc: "nexthdr".}: uint8
    reserved* {.importc: "reserved".}: uint8
    offset* {.importc: "offset".}: uint16
    id* {.importc: "id".}: uint32

  net_ipv4_hdr* {.importc: "net_ipv4_hdr", header: "net_ip.h", bycopy, packed.} = object
    vhl* {.importc: "vhl".}: uint8
    tos* {.importc: "tos".}: uint8
    len* {.importc: "len".}: uint16
    id* {.importc: "id".}: array[2, uint8]
    offset* {.importc: "offset".}: array[2, uint8]
    ttl* {.importc: "ttl".}: uint8
    proto* {.importc: "proto".}: uint8
    chksum* {.importc: "chksum".}: uint16
    src* {.importc: "src".}: in_addr
    dst* {.importc: "dst".}: in_addr

  net_icmp_hdr* {.importc: "net_icmp_hdr", header: "net_ip.h", bycopy, packed.} = object
    `type`* {.importc: "type".}: uint8
    code* {.importc: "code".}: uint8
    chksum* {.importc: "chksum".}: uint16

  net_udp_hdr* {.importc: "net_udp_hdr", header: "net_ip.h", bycopy, packed.} = object
    src_port* {.importc: "src_port".}: uint16
    dst_port* {.importc: "dst_port".}: uint16
    len* {.importc: "len".}: uint16
    chksum* {.importc: "chksum".}: uint16

  net_tcp_hdr* {.importc: "net_tcp_hdr", header: "net_ip.h", bycopy, packed.} = object
    src_port* {.importc: "src_port".}: uint16
    dst_port* {.importc: "dst_port".}: uint16
    seq* {.importc: "seq".}: array[4, uint8]
    ack* {.importc: "ack".}: array[4, uint8]
    offset* {.importc: "offset".}: uint8
    flags* {.importc: "flags".}: uint8
    wnd* {.importc: "wnd".}: array[2, uint8]
    chksum* {.importc: "chksum".}: uint16
    urg* {.importc: "urg".}: array[2, uint8]
    optdata* {.importc: "optdata".}: UncheckedArray[uint8]



proc net_addr_type2str*(`type`: net_addr_type): cstring =
  case `type`
  of NET_ADDR_AUTOCONF:
    return "AUTO"
  of NET_ADDR_DHCP:
    return "DHCP"
  of NET_ADDR_MANUAL:
    return "MANUAL"
  of NET_ADDR_OVERRIDABLE:
    return "OVERRIDE"
  of NET_ADDR_ANY:
    discard
  else:
    discard
  return "<unknown>"

##  IPv6 extension headers types

var NET_IPV6_NEXTHDR_HBHO* {.importc: "NET_IPV6_NEXTHDR_HBHO", header: "net_ip.h".}: int
## *
##  This 2 unions are here temporarily, as long as net_context.h will
##  be still public and not part of the core only.
##

type
  net_ip_header* {.importc: "net_ip_header", header: "net_ip.h", bycopy, union.} = object
    ipv4* {.importc: "ipv4".}: ptr net_ipv4_hdr
    ipv6* {.importc: "ipv6".}: ptr net_ipv6_hdr

  net_proto_header* {.importc: "net_proto_header", header: "net_ip.h", bycopy, union.} = object
    udp* {.importc: "udp".}: ptr net_udp_hdr
    tcp* {.importc: "tcp".}: ptr net_tcp_hdr


var NET_UDPH_LEN* {.importc: "NET_UDPH_LEN", header: "net_ip.h".}: int
## * @endcond
## *
##  @brief Check if the IPv6 address is a loopback address (::1).
##
##  @param addr IPv6 address
##
##  @return True if address is a loopback address, False otherwise.
##

proc net_ipv6_is_addr_loopback*(`addr`: ptr in6_addr): bool =
  return UNALIGNED_GET(addr(`addr`.s6_addr32[0])) == 0 and
      UNALIGNED_GET(addr(`addr`.s6_addr32[1])) == 0 and
      UNALIGNED_GET(addr(`addr`.s6_addr32[2])) == 0 and
      ntohl(UNALIGNED_GET(addr(`addr`.s6_addr32[3]))) == 1

## *
##  @brief Check if the IPv6 address is a multicast address.
##
##  @param addr IPv6 address
##
##  @return True if address is multicast address, False otherwise.
##

proc net_ipv6_is_addr_mcast*(`addr`: ptr in6_addr): bool =
  return `addr`.s6_addr[0] == 0xFF

discard "forward decl of net_if"
discard "forward decl of net_if_config"
proc net_if_ipv6_addr_lookup*(`addr`: ptr in6_addr; iface: ptr ptr net_if): ptr net_if_addr {.
    importc: "net_if_ipv6_addr_lookup", header: "net_ip.h".}
## *
##  @brief Check if IPv6 address is found in one of the network interfaces.
##
##  @param addr IPv6 address
##
##  @return True if address was found, False otherwise.
##

proc net_ipv6_is_my_addr*(`addr`: ptr in6_addr): bool =
  return net_if_ipv6_addr_lookup(`addr`, nil) != nil

proc net_if_ipv6_maddr_lookup*(`addr`: ptr in6_addr; iface: ptr ptr net_if): ptr net_if_mcast_addr {.
    importc: "net_if_ipv6_maddr_lookup", header: "net_ip.h".}
## *
##  @brief Check if IPv6 multicast address is found in one of the
##  network interfaces.
##
##  @param maddr Multicast IPv6 address
##
##  @return True if address was found, False otherwise.
##

proc net_ipv6_is_my_maddr*(maddr: ptr in6_addr): bool =
  return net_if_ipv6_maddr_lookup(maddr, nil) != nil

## *
##  @brief Check if two IPv6 addresses are same when compared after prefix mask.
##
##  @param addr1 First IPv6 address.
##  @param addr2 Second IPv6 address.
##  @param length Prefix length (max length is 128).
##
##  @return True if IPv6 prefixes are the same, False otherwise.
##

proc net_ipv6_is_prefix*(addr1: ptr uint8; addr2: ptr uint8; length: uint8): bool =
  var bits: uint8
  var bytes: uint8
  var remain: uint8
  var mask: uint8
  if length > 128:
    return false
  if memcmp(addr1, addr2, bytes):
    return false
  if not remain:
    ##  No remaining bits, the prefixes are the same as first
    ##  bytes are the same.
    ##
    return true
  mask = ((0xff shl (8 - remain)) xor 0xff) shl remain
  return (addr1[bytes] and mask) == (addr2[bytes] and mask)

## *
##  @brief Check if the IPv4 address is a loopback address (127.0.0.0/8).
##
##  @param addr IPv4 address
##
##  @return True if address is a loopback address, False otherwise.
##

proc net_ipv4_is_addr_loopback*(`addr`: ptr in_addr): bool =
  return `addr`.s4_addr[0] == 127'u

## *
##   @brief Check if the IPv4 address is unspecified (all bits zero)
##
##   @param addr IPv4 address.
##
##   @return True if the address is unspecified, false otherwise.
##

proc net_ipv4_is_addr_unspecified*(`addr`: ptr in_addr): bool =
  return UNALIGNED_GET(addr(`addr`.s_addr)) == 0

## *
##  @brief Check if the IPv4 address is a multicast address.
##
##  @param addr IPv4 address
##
##  @return True if address is multicast address, False otherwise.
##

proc net_ipv4_is_addr_mcast*(`addr`: ptr in_addr): bool =
  return (ntohl(UNALIGNED_GET(addr(`addr`.s_addr))) and 0xF0000000) == 0xE0000000

## *
##  @brief Check if the given IPv4 address is a link local address.
##
##  @param addr A valid pointer on an IPv4 address
##
##  @return True if it is, false otherwise.
##

proc net_ipv4_is_ll_addr*(`addr`: ptr in_addr): bool =
  return (ntohl(UNALIGNED_GET(addr(`addr`.s_addr))) and 0xA9FE0000) == 0xA9FE0000

## *
##   @def net_ipaddr_copy
##   @brief Copy an IPv4 or IPv6 address
##
##   @param dest Destination IP address.
##   @param src Source IP address.
##
##   @return Destination address.
##

proc net_ipaddr_copy*(dest: untyped; src: untyped) {.importc: "net_ipaddr_copy",
    header: "net_ip.h".}
## *
##   @brief Compare two IPv4 addresses
##
##   @param addr1 Pointer to IPv4 address.
##   @param addr2 Pointer to IPv4 address.
##
##   @return True if the addresses are the same, false otherwise.
##

proc net_ipv4_addr_cmp*(addr1: ptr in_addr; addr2: ptr in_addr): bool =
  return UNALIGNED_GET(addr(addr1.s_addr)) == UNALIGNED_GET(addr(addr2.s_addr))

## *
##   @brief Compare two IPv6 addresses
##
##   @param addr1 Pointer to IPv6 address.
##   @param addr2 Pointer to IPv6 address.
##
##   @return True if the addresses are the same, false otherwise.
##

proc net_ipv6_addr_cmp*(addr1: ptr in6_addr; addr2: ptr in6_addr): bool =
  return not memcmp(addr1, addr2, sizeof(in6_addr))

## *
##  @brief Check if the given IPv6 address is a link local address.
##
##  @param addr A valid pointer on an IPv6 address
##
##  @return True if it is, false otherwise.
##

proc net_ipv6_is_ll_addr*(`addr`: ptr in6_addr): bool =
  return UNALIGNED_GET(addr(`addr`.s6_addr16[0])) == htons(0xFE80)

## *
##  @brief Check if the given IPv6 address is a unique local address.
##
##  @param addr A valid pointer on an IPv6 address
##
##  @return True if it is, false otherwise.
##

proc net_ipv6_is_ula_addr*(`addr`: ptr in6_addr): bool =
  return `addr`.s6_addr[0] == 0xFD
